force-app/src/objects/Framework__Registry__mdt.object
<CustomObject>
    <fields>
        <fullName>Framework__Category__c</fullName>
        <description>todo</description>
        <inlineHelpText>todo</inlineHelpText>
        <label>Entry Category</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Framework__Is_Enabled__c</fullName>
        <defaultValue>true</defaultValue>
        <description>todo</description>
        <inlineHelpText>todo</inlineHelpText>
        <label>Is Enabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Framework__Key__c</fullName>
        <description>todo</description>
        <inlineHelpText>todo</inlineHelpText>
        <label>Entry Key</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Framework__Value__c</fullName>
        <description>todo</description>
        <inlineHelpText>todo</inlineHelpText>
        <label>Entry Value</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <label>Fonteva Registry Entry</label>
    <pluralLabel>Fonteva Registry Entries</pluralLabel>
</CustomObject>